# sound-worlds

./: .gitignore  ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
analyzer/: README.md  __init__.py  cli.py  core.py  pyproject.toml
compilers/aurora/: package.json
compilers/brick-breaker/: package.json
compilers/lumenfall/: package.json
compilers/marble/: package.json
compilers/metro/: README.md  package.json
compilers/painting/: README.md  package.json
compilers/phaseglass/: package.json
compilers/runner/: README.md  package.json  tsconfig.json
compilers/spectral-bloom/: package.json
compilers/vortex-loom/: package.json
compilers/waveform-halo/: package.json
docs/: README.md  city-builder.md  corridor-shooter.md  descent.md  ecosystem.md  implementation-status.md  lumenfall.md  marble-music.md  metro-map.md  painting.md  storm.md  waveform-runner.md
docs/architecture/: analyzer.md  compilers.md  data-contracts.md  export.md  reaper-extractor.md  renderer.md
docs/implementation/: brick-breaker-implementation.md  brick-breaker-work-orders.md  ecosystem-worlds-roadmap.md  lumenfall-implementation.md  marble-live-control-performance.md  marble-music-3d-physics-implementation.md  marble-music-acceptance-checklist.md  marble-music-deep-design-review.md  math-audit.md  (+24 more)
extractor/: README.md
schemas/: manifest.v2.schema.json  song.v1.schema.json
tests/: test_analyzer.py  test_validate_export.py
tools/: benchmark-marble-live.mjs  check-determinism.mjs  finalize_export.py  validate_export.py
(+120 files in other folders)
